--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
         <h2>Projects</h2>
         <ul>
-            <li><a href="profilepage.html">Profile page</a></li>
+            <li><a href="profile-page.html">Profile page</a></li>
             <li>form page</li>
             <li>landing page</li>
         </ul>
