--- a/profile-page.html
+++ b/profile-page.html
@@ -4,7 +4,7 @@
         <title>Easy's Personal website</title>
     </head>
         <body>
-            <img src="pfp.jpg" alt="" width="150">
+            <img src="Pfp.jpg" alt="" width="150">
             <h1>Hi, my name is Easy</h1>
             <h2>Fun facts about me</h2>
             <ul>
